# trace2context

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md  trace_schema.md  usage.md
examples/simulated_traces/: pipeline_masked_failure.jsonl  repeated_error.jsonl  tool_hallucination.jsonl
examples/toy_python_bug/: README.md
examples/toy_python_bug/src/: calc.py
examples/toy_python_bug/tests/: test_calc.py
experiments/configs/: baselines.toml
src/trace2context/: __init__.py  __main__.py  cli.py  config.py
src/trace2context/agent/: __init__.py  loop.py  model.py  parser.py  prompts.py
src/trace2context/audit/: __init__.py  analyzer.py  rules.py
src/trace2context/context/: __init__.py  builder.py  decisions.py  filter.py
src/trace2context/experiments/: metrics.py  runner.py
src/trace2context/reporting/: markdown.py
src/trace2context/tools/: base.py  file_ops.py  shell.py
src/trace2context/trace/: __init__.py  logger.py  schema.py  token_counter.py
tests/: test_agent_loop.py  test_agent_parser.py  test_audit_rules.py  test_context_filter.py  test_example_traces.py  test_experiment_runner.py  test_markdown_report.py  test_model_client.py  test_shell_tool.py  test_trace_logger.py
