[project]
name = "trace2context"
version = "0.1.0"
description = "Audit-aware context management prototype for tool-using LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Trace2Context contributors" }
]
dependencies = [
  "pydantic>=2.8",
  "rich>=13.7",
  "tiktoken>=0.7",
  "typer>=0.12",
]

[project.scripts]
trace2context = "trace2context.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "trace2context"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
